--- a/index.html
+++ b/index.html
@@ -87,8 +87,13 @@
             <div class="about-content">
                 <div class="about-text">
                     <h3>My Journey in Web Development</h3>
-                    <p>I am Devapriya Paul Kundu, a passionate Frontend Developer with over 1 year of experience specializing in HTML, CSS, and JavaScript. I am dedicated to building responsive, user-friendly web applications that drive positive change.</p>
-                    <p>With a portfolio of 4+ diverse projects, I have a strong foundation in turning concepts into functional digital solutions. A highlight of my journey includes participating in a hackathon where I spearheaded the frontend development for a Waste Food Management System. This impactful solution connects restaurants with NGOs to minimize food waste, reflecting my commitment to using technology for social good.</p>
+                    <p>Hello! I’m Devapriya Paul Kundu, a developer passionate about connecting the digital and physical worlds. Currently pursuing my Diploma in Computer Science and Technology at Technique Polytechnic Institute (TPI), I have spent the last year refining my skills in Frontend Development, IoT, and Embedded Systems.</p>
+                    <p>My journey is defined by hands-on creation. Over the course of 4+ major projects, I have explored diverse domains:</p>
+                    <ul>
+                        <li><strong>Web Development:</strong> I developed,a Waste Food Management System Font-end to tackle food sustainability and I actively applying image recignition using open cv to builed intelligent,problem-solving application.</li>
+                        <li><strong>IoT & Embedded Systems:</strong> I designed an IoT-based Automatic Saline Level Monitoring System, applying engineering principles to solve critical healthcare logistics.</li>
+                    </ul>
+                    <p>Beyond code, I am a dedicated problem solver. Whether I am hacking away at a solution during events like Hack Technique 2026 or optimizing code during my internship at SkillCraft Technology, I am driven by the impact technology can have on real-world problems.</p>
                     <div class="about-details">
                         <div class="detail-item">
                             <i class="fas fa-user"></i>
@@ -163,7 +168,6 @@
                 <p class="section-subtitle">Some of my recent work</p>
             </div>
             <div class="projects-container">
-                <!-- Projects will be populated by JavaScript -->
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-image-content">
@@ -207,7 +211,6 @@
                             <span class="tag">Responsive Design</span>
                             <span class="tag">UI/UX</span>
                         </div>
-                        <!-- No GitHub button for this project -->
                     </div>
                 </div>
                 
@@ -229,7 +232,6 @@
                             <span class="tag">Node.js</span>
                             <span class="tag">REST API</span>
                         </div>
-                        <!-- No GitHub button for this project -->
                     </div>
                 </div>
                 
@@ -300,6 +302,7 @@
                         <a href="https://github.com/Devapriya2006" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/devapriya-paul-kundu-0a1472343?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
                         <a href="https://www.instagram.com/imdevapriyapaul?igsh=MWY2ODk4MGY1eG1kMQ==" target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/share/1DL6Y1rC8x/" target="_blank" class="social-link"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
                 <form class="contact-form" id="contactForm">
